
        News and upgrading information for Gedafe
        =========================================

(arrows indicate actions that you should make when upgrading)

HEAD	(2004-01-20) 
------------------------------------------------------------------------------
  * Allow column names not starting with the table name.
    (documentation change in doc/gedafe-sql.pod (johannes)

HEAD	(2003-12-12)
------------------------------------------------------------------------------
  * offer a button to copy a record "as new" i.e. "clone" a record. 	
    Change template td_edit.html, GUI.pm, add th_clone.html and
    "clone.gif" Button (johannes)

  * Support for user plugin widgets as per Widgets.pm
    Works just like the pearls. (freek)

  * Add id columms to meta_fields and meta_tables in example database
    demo.sql. This is not needed, but it allows you to maintain these
    tables more easy with tools like phpPgAmin or pgadmin3 (johannes)

1.2.1 (2003-09-03)
------------------------------------------------------------------------------
  * New widget: combo (just the combo-box without text entry)

  * Bugfixes: date widget didn't work.

1.2.0 (2003-09-27)
------------------------------------------------------------------------------
  * PearlReports have been integrated with gedafe. It is now possible
    to write perl modules (pearls) which will be picked up by gedafe
    and presented in the "Entry" screen. The idea is to use this
    facility for generating complex, structured (multi-level) reports.
    Pearls have access to gedafes Webform generator as well a to the
    database handle.

  * Combo-boxes must always reference the 'id' of the table and not the
    'hid' if the table has one. The old behaviour was confusing and was
    thus changed, but you can still tell Gedafe to behave like that
    by setting 'gedafe_compat' to '1.0' in the Start function.

    -> Change all combo-boxes where the 'hid' is referenced in the